# SC2dFC

./: .gitignore  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/scdfc/: __init__.py  audit.py  cache.py  cli.py  config.py  connectivity.py  data.py  evaluation.py  losses.py  metrics.py  split.py  training.py  types.py
src/scdfc/models/: __init__.py  autoencoder.py  baselines.py  condition.py  sc_encoders.py  sequence.py  temporal.py
tests/: test_cache.py  test_connectivity.py  test_metrics.py  test_models.py  test_split.py
