[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scdfc"
version = "0.1.0"
description = "Deterministic SC + warm-up FC to dynamic FC sequence prediction"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "PyYAML>=6.0",
  "torch>=2.2",
  "zarr>=2.18,<3",
  "numcodecs>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
scdfc = "scdfc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

